[tool.poetry]
name = "ztnd"
version = "0.1.0"
description = ""
authors = ["Gabriel Altay <gabriel.altay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
numpy = "^2.1.1"
openai = "^1.51.0"
pydantic = "^2.9.2"
tiktoken = "^0.8.0"
plotly = "^5.24.1"
ipython = "^8.28.0"
rich = "^13.9.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
