[project]
name = "ztnd"
version = "0.1.0"
description = "Generate LLM graphs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "black>=24.10.0",
    "ipython>=8.28.0",
    "networkx>=3.4.1",
    "numpy>=2.1.2",
    "openai>=1.51.2",
    "pip>=24.2",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
    "rich>=13.9.2",
    "scipy>=1.14.1",
    "tiktoken>=0.8.0",
    "typer>=0.12.5",
]
